tests/compile_time_tests/tag_attribute_argument_empty.stderr
error: proc-macro derive panicked
 --> tests/compile_time_tests/tag_attribute_argument_empty.rs:3:10
  |
3 | #[derive(TagName)]
  |          ^^^^^^^
  |
  = help: message: `tag` attribute expectes an assignment expression `[tag(case = "lower" | "upper">]`: Error("expected attribute arguments in parentheses: #[tag(...)]")
