tests/compile_time_tests/tag_attribute_argument_empty.rs
use tagname::TagName;

#[derive(TagName)]
enum Cases {
    #[tag]
    Lower,
    Upper
}

fn main() {
}
